...
                  backgroundColor: colors.backgroundElement,
                  borderColor: colors.borderSubtle,
                },
              ]}
            >
              <Text style={styles.secondaryButtonText}>
                TÔI ĐÃ CÓ TÀI KHOẢN
              </Text>
            </View>
          </AnimatedPressable>
        </Animated.View>
      </View>
    </SafeAreaView>
...
